--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="text-center">
           <div class="author-img" style="background-image: url(images/aP.JPG);"></div>
           <h1 id="colorlib-logo"><a href="index.html">Adarsh Jain</a></h1>
-          <span class="position">Flutter | MERN Stack | IIT Jodhpur</span>
+          <span class="position">Flutter | MERN Stack | Apty</span>
         </div>
         <nav id="colorlib-main-menu" role="navigation" class="navbar">
           <div id="navbar" class="collapse">
@@ -247,7 +247,17 @@
                         </div>
                       </div>
                     </div>
-
+                    <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                      <div class="progress-wrap">
+                        <h3>C++</h3>
+                        <div class="progress">
+                          <div class="progress-bar color-6" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 85%;">
+                            <span>85%</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                     <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                       <div class="progress-wrap">
                         <h3>Flutter/Dart</h3>
@@ -294,17 +304,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                      <div class="progress-wrap">
-                        <h3>C++</h3>
-                        <div class="progress">
-                          <div class="progress-bar color-6" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 70%;">
-                            <span>85%</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                    
                     <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                       <div class="progress-wrap">
                         <h3>Flask</h3>
