--- a/index.html
+++ b/index.html
@@ -153,8 +153,13 @@
                         Currently building backend services at Paytm Money, to support payment flows with UPI, Net Banking, Mandates, Cards, VAN etc., associated with various use-case within equity, mutual fund, NPS and subscription umbrella. 
                       </p>
                       <p> 
-                        I am looking for opportunities to work and collaborate with highly ambitious people to deliver my contribution. Here are some of my past achievements. -> Ranked among the top 0.5% of 1.4 million applicants in JEE Advanced 2017. -> 55/11,000+ globally (AIR27) in div2 of July’19 Long Challenge of CodeChef. -> Rank 92 in the Data Structures and Algorithms Coding contest of HackerEarth.
+                        I am looking for opportunities to work and collaborate with highly ambitious people to deliver my contribution. Here are some of my past achievements. 
                       </p>
+                      <ul>
+                        <li>Ranked among the top 0.5% of 1.4 million applicants in JEE Advanced 2017.</li>
+                        <li>55/11,000+ globally (AIR27) in div2 of July’19 Long Challenge of CodeChef.</li>
+                        <li>Rank 92 in the Data Structures and Algorithms Coding contest of HackerEarth.</li>
+                      </ul>  
                     </div>
                   </div>
                 </div>
@@ -182,9 +187,9 @@
                     <i class="icon-layers2"></i>
                   </span>
                   <div class="desc">
-                    <h3>Compititive Coding</h3>
+                    <h3>Problem Solving</h3>
                     <p>
-                      Strong mathematics with deep understanding of relevant compititive programming concepts
+                      Strong mathematics with deep understanding of relevant Data structures, Algorithms and programming concepts
                     </p>
                   </div>
                 </div>
@@ -198,7 +203,7 @@
                   <div class="desc">
                     <h3>Backend Applications</h3>
                     <p>
-                    Developing Payments Tech associated with various payment modes and PG systems
+                    Experties in Payments Technologies associated with various payment methods like Mandates, UPI and other PG systems
                     Stack: Java Spring boot, Node.
                     </p>
                   </div>
@@ -235,7 +240,7 @@
                         <div class="progress">
                           <div class="progress-bar color-2" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                             aria-valuemax="100" style="width: 90%;">
-                            <span></span>
+                            <span>90%</span>
                           </div>
                         </div>
                       </div>
@@ -244,7 +249,7 @@
                       <div class="progress-wrap">
                         <h3>Problem-Solving</h3>
                         <div class="progress">
-                          <div class="progress-bar color-1" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                          <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                             aria-valuemax="100" style="width: 90%;">
                             <span>90%</span>
                           </div>
@@ -256,8 +261,8 @@
                       <div class="progress-wrap">
                         <h3>Java</h3>
                         <div class="progress">
-                          <div class="progress-bar color-3" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 70%;">
+                          <div class="progress-bar color-3" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 80%;">
                             <span>80%</span>
                           </div>
                         </div>
@@ -268,8 +273,8 @@
                       <div class="progress-wrap">
                         <h3>Spring Boot</h3>
                         <div class="progress">
-                          <div class="progress-bar color-2" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 70%;">
+                          <div class="progress-bar color-2" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 80%;">
                             <span>80%</span>
                           </div>
                         </div>
@@ -280,7 +285,7 @@
                       <div class="progress-wrap">
                         <h3>C++</h3>
                         <div class="progress">
-                          <div class="progress-bar color-6" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                          <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                             aria-valuemax="100" style="width: 80%;">
                             <span>80%</span>
                           </div>
@@ -315,7 +320,7 @@
                       <div class="progress-wrap">
                         <h3>React</h3>
                         <div class="progress">
-                          <div class="progress-bar color-5" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                          <div class="progress-bar color-5" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                             aria-valuemax="100" style="width: 75%;">
                             <span>75%</span>
                           </div>
@@ -438,7 +443,6 @@
                   </div>
                   <div class="row">
 
-                    https://entrackr.com/storage/2019/03/paytm-money.jpg
                     <!--
                       <div class="col-md-12 animate-box" data-animate-effect="fadeInRight">
                       <div class="blog-entry">
@@ -471,7 +475,7 @@
                     -->
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInRight">
                       <div class="blog-entry">
-                        <a href="#" class="blog-img"><img src="images/ff.PNG" class="img-responsive"
+                        <a href="#" class="blog-img"><img src="images/ff.jpeg" class="img-responsive"
                             alt="HTML5 Bootstrap Template by colorlib.com" /></a>
                         <div class="desc">
                           <span><small>Oct 2021 - Present </small> |
@@ -481,23 +485,27 @@
                             <a href="#">Paytm Money</a>
                           </h3>
                           <p>
-                            I joined in Oct ’21, working with Paytm-Money’s Payments Tech team as a Backend software engineer with Java Spring Boot tech stack.
+                            I joined in Oct ’21, working with Paytm-Money’s Payments Tech team as a <b>Backend software engineer</b> with Java Spring Boot tech stack.
                           </p>
                           <p>
-                            My work is focused on maintaining and improving the existing system and building new features around AutoPay payments for various use-cases with UPI, net-banking and Pmandate.
+                            My work is focused on maintaining and improving the existing system and building new features around <b>AutoPay payments for various use-cases with UPI, net-banking and Pmandate.</b>
                           </p>
                           <p>
-                            My work is focused on maintaining and improving the existing system and building new features around AutoPay payments for various use-cases with UPI, net-banking and Pmandate.
+                            Here are some of my recent work: 
                           </p>
-                          <p>
-                            Here are some of my recent work: Building payments service for the Multi-Txn UPI Auto-pay feature designed the end-to-end attribute flow and implementation strategy. Dev-tested the end-to-end service for sound 3ed party integration and overall flow processing. 
-                          </p>
-                          <p>Built re-architecture for paper and e-mandate flow, including Api and file-based processing on Billdesk and Paytm payment gateways. Dev-tested the end-to-end service for sound 3ed party integration and overall flow processing. 
-                          </p>
-                          <p>Reported and took the initiative to improve the snorkel processing for payout file processing, designed and built a retry mechanism that covers all process level failure scenarios. Have ownership of Payout and NPS 2nd Leg services, taking care of all the related new developments, systems and customer issues. 
-                          </p>
-                          <p>Lead the way to reduce the payment application’s overall memory usage.
-                          </p>
+                          <ul>
+                          <li>Building payments service for the <b>Multi-Txn UPI Auto-pay</b> feature designed the end-to-end attribute flow and implementation strategy. Dev-tested the end-to-end service for sound 3ed party integration and overall flow processing. 
+                          </li>
+                          <li>Built <b>re-architecture for paper and e-mandate flow</b>, including Api and file-based processing on Billdesk and Paytm payment gateways. Dev-tested the end-to-end service for sound 3ed party integration and overall flow processing. 
+                          </li>
+                          <li>Developed <b>automation flow for Affiliate Payouts</b> remuneration process, incorporation with existing wallet payouts flow. (Ongoing*)
+                          </li>
+                          <li>Reported and took the initiative to <b>improve the snorkel processing for payout</b> file processing, designed and built a retry mechanism that covers all process level failure scenarios. Have ownership of Payout and NPS 2nd Leg services, taking care of all the related new developments, systems and customer issues. 
+                          </li>
+                          <li>Lead the way to reduce the payment application’s overall memory usage.
+                          </li>
+                          </ul>
+                            
                         </div>
                       </div>
                     </div>
