--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         aria-expanded="false" aria-controls="navbar"><i></i></a>
       <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
         <div class="text-center">
-          <div class="author-img" style="background-image: url(images/aP.jpeg);"></div>
+          <div class="author-img" style="background-image: url(images/aP.jpg);"></div>
           <h1 id="colorlib-logo"><a href="index.html">Adarsh Jain</a></h1>
           <span class="position"> Communicator | Problem Solver</span>
         </div>
@@ -354,7 +354,7 @@
               <div class="col-md-12 animate-box" data-animate-effect="fadeInRight">
                 <div class="blog-entry">
                   
-                  <a href="#" class="blog-img"><img src="images/prepJee.PNG" class="img-responsive"
+                  <a href="#" class="blog-img"><img src="images/prepJee.jpg" class="img-responsive"
                       alt="HTML5 Bootstrap Template by colorlib.com" /></a>
                   
                       <div class="desc">
